--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ alert ("Bem-vindo a Joalheiria! Por favor, faça o seu Login.");
     <form id="form">
 
         <div style="text-align:right";>
-        <input type="text" required type="text" name="nome" id="nome" class="btn btn-outline-secondary" placeholder="Digite o seu nome" value="">
+        <input type="text" required type="text" name="nome" id="nome" class="btn btn-outline-secondary" placeholder="Visitante" value="">
      
         <button type="button" id="" class="btn btn-outline-warning btn-sm" value="log" onclick="logar()">Logar</button>
       </div>
